--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,45 @@
+.nav{
+    display: flex;
+    justify-content: space-between;
+}
+
 .nav h1{
-    color: ;
+    color: blueviolet;
+    margin: 0;
+    font-size: 40px;
+}
+.nav .nav-search {
+flex: 1;
+display: flex;
+margin-left: 5%;
+margin-right: 5%;
+margin-top: 5px;
+}
+.nav .nav-search input {
+    flex: 1;
+    color:blueviolet ;
+    border: 1px solid blueviolet;
+    height: 35px;
+    border-right: none;
+}
+.nav .nav-search button{
+    color: blueviolet;
+    border: 1px solid blueviolet;
+    height: 39px;
+}
+
+.nav ul{
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+.nav ul li {
+padding-top: 15px;
+padding-left: 15px;
+}
+
+.nav ul a{
+    text-decoration: none;
+color: blueviolet;
 }
